--- a/index.html
+++ b/index.html
@@ -216,10 +216,9 @@
   <section class="content" id="about">
     <h2>About</h2>
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate typographically their voices.</p>
-    <p>I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK), worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA), led projects for clients such as Google, Amazon, Virgin, Paralympics, MotoGP and FC Barcelona, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
-    <p>My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
-    <p>I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and for 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
-    <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in Zaragoza (Spain), Reading and London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
+    <p>I’ve led projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts. My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
+    <p>I previously worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA) and I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK). I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and for 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
+    <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
     <p>I share my life with Cris — and Bunbury, our dog.</p>
   </section>
     <section class="content" id="contact">
@@ -250,6 +249,11 @@
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
+        <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
+        <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
+        <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
+        <li>✅ <em><strong>El árabe del futuro</em></strong> de Riad Sattouf</li>
+        <li>&emsp;&emsp;&rarr; Vol. 6: 1994-2011</li>
         <li>❤️ <em><strong>Later</em></strong> by Stephen King</li>
         <li>✅ <em><strong>Almáciga</em></strong> de María Sánchez</li>
         <li>❤️ <em><strong>Costo</em></strong> de Andros Lozano</li>
@@ -457,7 +461,7 @@
       2023:
       <ul>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 30 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 45 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
