--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </ul>
   </section>
   <section class="content" id="intro">
-    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. I help brands and humans worldwide to encapsulate typographically their voices at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.</h1>
+    <h1><strong>¡Hola!</strong> I’m a designer with a passion for words, interested in how typography plays a storytelling role at the intersection of culture, technology and craft. I help brands and humans worldwide to encapsulate their voices typographically at <a href="https://arillatype.studio" id="link">Arillatype.Studio®</a>.</h1>
   </section>
   <section class="content" id="fonts">
     <h2>Fonts</h2>
@@ -215,7 +215,7 @@
   </section>
   <section class="content" id="about">
     <h2>About</h2>
-    <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate typographically their voices.</p>
+    <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
     <p>I’ve led projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts. My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
     <p>I previously worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA) and I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK). I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and for 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
     <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
