--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
         <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
+        <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
@@ -461,7 +462,7 @@
       2023:
       <ul>
         <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 45 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 50 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
