--- a/index.html
+++ b/index.html
@@ -461,7 +461,6 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
         <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 50 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
@@ -473,6 +472,7 @@
       </ul>
       <br>2022:
       <ul>
+        <li>⏹️ <em><strong>It Takes Two</em></strong> on Playstation 5, 8 hours</li>
         <li>❤️ <em><strong>Tunic</em></strong> on Playstation 5, 16 hours</li>
         <li>⏹️ <em><strong>God of War: Ragnarök</em></strong> on Playstation 5, 13 hours</li>
         <li>❤️ <em><strong>Demon’s Souls</em></strong> on Playstation 5, 24 hours</li>
