--- a/index.html
+++ b/index.html
@@ -246,15 +246,16 @@
       </p>
       2023:
       <ul>
-        <li>🥸 <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
+        <li>🥸 <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
         <li>✅ <em><strong>El árabe del futuro</em></strong> de Riad Sattouf</li>
         <li>&emsp;&emsp;&rarr; Vol. 6: 1994-2011</li>
+        <li>⏹️ <em><strong>101 historias NBA</em></strong> de Gonzalo Vázquez</li>
         <li>❤️ <em><strong>Later</em></strong> by Stephen King</li>
         <li>✅ <em><strong>Almáciga</em></strong> de María Sánchez</li>
         <li>❤️ <em><strong>Costo</em></strong> de Andros Lozano</li>
@@ -461,7 +462,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 50 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 60 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
