--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
         <li>🥸 <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
+        <li>✅ <em><strong>Astérix en Helvecia</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
@@ -462,7 +463,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 60 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 90 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
