--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<title>Pedro Arilla</title>
-	<meta name="description" content="¡Hola! I’m a designer with a passion for words working as a Type Director at Arillatype.Studio® on helping brands worldwide to encapsulate typographically their voices.">
+	<meta name="description" content="¡Hola! I’m a designer with a passion for words working as a Type Director at Arillatype.Studio® on helping brands worldwide to encapsulate their voices typographically.">
   <meta property="og:title" content="Pedro Arilla"/>
-	<meta property="og:description" content="¡Hola! I’m a designer with a passion for words working as a Type Director at Arillatype.Studio® on helping brands worldwide to encapsulate typographically their voices."/>
+	<meta property="og:description" content="¡Hola! I’m a designer with a passion for words working as a Type Director at Arillatype.Studio® on helping brands worldwide to encapsulate their voices typographically."/>
 	<meta property="og:type" content="website"/>
 	<meta property="og:url" content="https://pedroarilla.com/"/>
 	<meta property="og:image" content="https://pedroarilla.com/pedroarilla.jpg"/>
@@ -250,7 +250,12 @@
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
         <li>🥸 <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
-        <li>✅ <em><strong>Astérix en Helvecia</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>&emsp;&emsp;&rarr; Astérix en Córcega</li>
+        <li>&emsp;&emsp;&rarr; El adivino</li>
+        <li>&emsp;&emsp;&rarr; Los laureles del César</li>
+        <li>&emsp;&emsp;&rarr; Astérix y los Normandos</li>
+        <li>&emsp;&emsp;&rarr; Astérix en Helvecia</li>
         <li>✅ <em><strong>Blake y Mortimer</em></strong> de Edgard P. Jacobs</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #1</li>
         <li>&emsp;&emsp;&rarr; El misterio de la gran pirámide #2</li>
@@ -267,7 +272,7 @@
         <li>❤️ <em><strong>Blanco inmaculado</em></strong> de Noelia Lorenzo</li>
         <li>⏹️ <em><strong>Slam Dunk</em></strong> de Takehiko Inoue</li>
         <li>&emsp;&emsp;&rarr; Vol. 1: Hanamichi Sakuragi</li>
-        <li>✅ <em><strong>Olimpiadas del Humor</em></strong> de Franciso Ibáñez</li>
+        <li>♻️ <em><strong>Olimpiadas del Humor</em></strong> de Franciso Ibáñez</li>
         <li>&emsp;&emsp;&rarr; Gatolandia 76</li>
         <li>&emsp;&emsp;&rarr; Moscú 80</li>
         <li>&emsp;&emsp;&rarr; Los Ángeles 84</li>
@@ -463,7 +468,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 90 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 100 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
