--- a/index.html
+++ b/index.html
@@ -248,9 +248,13 @@
       <ul>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
-        <li>🥸 <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
+        <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>&emsp;&emsp;&rarr; Astérix en la India</li>
+        <li>&emsp;&emsp;&rarr; Obélix y Compañía</li>
+        <li>&emsp;&emsp;&rarr; La gran travesía</li>
+        <li>&emsp;&emsp;&rarr; Astérix y el caldero</li>
         <li>&emsp;&emsp;&rarr; Astérix en Córcega</li>
         <li>&emsp;&emsp;&rarr; El adivino</li>
         <li>&emsp;&emsp;&rarr; Los laureles del César</li>
@@ -602,6 +606,7 @@
     <div class="col2c" id="teaching">
       <p><strong>Teaching</strong></p>
       <ul>
+        <li><strong>Type design.</strong> VII Glíglifo, Sos del Rey Católico, Spain, 2023.</li>
         <li><strong>Colour Fonts.</strong> Escuela José Val del Omar, Granada, Spain, 2023.</li>
         <li><strong>Type design.</strong> Glíglifo Mini, Palma de Mallorca, Spain, 2022.</li>
         <li><strong>Boost your typeface.</strong> Telmo Dice, Málaga, Spain, 2022.</li>
@@ -609,6 +614,7 @@
         <li><strong>Type design.</strong> EASD València, València, Spain, 2020.</li>
         <li><strong>Typographic narrative.</strong> Máster de Diseño Gráfico, Animum3D, online, 2020.</li>
         <li><strong>Type design.</strong> Type Crit Crew, online, 2020.</li>
+        <li><strong>Type design.</strong> VI Glíglifo, Sos del Rey Católico, Spain, 2019.</li>
         <li><strong>Type design.</strong> V Glíglifo, Sos del Rey Católico, Spain, 2018.</li>
         <li><strong>Type design.</strong> Tristana Project, Zaragoza, Spain, 2018.</li>
         <li><strong>Type design.</strong> IV Glíglifo, Sos del Rey Católico, Spain, 2017.</li>
