--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
+        <li>&emsp;&emsp;&rarr; La cizaña</li>
+        <li>&emsp;&emsp;&rarr; El combate de los jefes</li>
         <li>&emsp;&emsp;&rarr; Astérix en la India</li>
         <li>&emsp;&emsp;&rarr; Obélix y Compañía</li>
         <li>&emsp;&emsp;&rarr; La gran travesía</li>
