--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
       2023:
       <ul>
         <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 100 hours</li>
+        <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 4 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
         <li>⏹️ <em><strong>Metroid Dread</em></strong> on Nintendo Switch, 3 hours</li>
         <li>⏹️ <em><strong>Minecraft Dungeons</em></strong> on Playstation 5, 1 hour</li>
