--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <h2>About</h2>
     <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
     <p>I’ve led projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts. My job has been awarded and exhibited worldwide. I teach workshops and speak at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
-    <p>I previously worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA) and I’ve graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK). I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and for 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
+    <p>I previously worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA). I graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK). I’m writing a book on type evaluation; I co-organise and teach an international one-week type design workshop (<a href="https://gliglifo.com" target="_blank">Glíglifo</a>); and for 11 years I wrote one of the main blogs on typography in Spanish (Don Serifa).</p>
     <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
     <p>I share my life with Cris — and Bunbury, our dog.</p>
   </section>
@@ -247,11 +247,11 @@
       2023:
       <ul>
         <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
-        <li>🥸 <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>✅ <em><strong>Magos del Humor</em></strong> de Franciso Ibáñez</li>
         <li>&emsp;&emsp;&rarr; Mundial de Baloncesto 2023</li>
+        <li>⏹️ <em><strong>Mujer de frontera</em></strong> de Helena Maleno Garzón</li>
         <li>♻️ <em><strong>Astérix</em></strong> de R. Goscinny y A. Uderzo</li>
         <li>&emsp;&emsp;&rarr; La cizaña</li>
         <li>&emsp;&emsp;&rarr; El combate de los jefes</li>
