--- a/index.html
+++ b/index.html
@@ -246,7 +246,11 @@
       </p>
       2023:
       <ul>
-        <li>🥸 <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
+        <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
+        <li>&emsp;&emsp;&rarr; Volumen 1</li>
+        <li>&emsp;&emsp;&rarr; Volumen 2</li>
+        <li>&emsp;&emsp;&rarr; Volumen 3</li>
+        <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
         <li>✅ <em><strong>Magos del Humor</em></strong> de Franciso Ibáñez</li>
