--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
         <li>&emsp;&emsp;&rarr; Volumen 1</li>
         <li>&emsp;&emsp;&rarr; Volumen 2</li>
         <li>&emsp;&emsp;&rarr; Volumen 3</li>
+        <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>✅ <em><strong>La Guerra Civil española</em></strong> de Paul Preston y José Pablo García</li>
         <li>✅ <em><strong>The Last of Us: La humanidad en juego</em></strong> de Diego González</li>
         <li>✅ <em><strong>The Legend of Zelda: Ocarina of Time</em></strong> de Akira Himekawa</li>
@@ -480,7 +481,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 120 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 130 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
