--- a/index.html
+++ b/index.html
@@ -246,6 +246,11 @@
       </p>
       2023:
       <ul>
+        <li>♻️ <em><strong>Las aventuras de Tintín</em></strong> de Hergé</li>
+        <li>&emsp;&emsp;&rarr; Tintín en el Congo</li>
+        <li>&emsp;&emsp;&rarr; Tintín en América</li>
+        <li>&emsp;&emsp;&rarr; Los cigarros del faraón</li>
+        <li>&emsp;&emsp;&rarr; El Loto Azul</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
         <li>&emsp;&emsp;&rarr; Volumen 1</li>
@@ -482,7 +487,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 170 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 190 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
