--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
         <li>&emsp;&emsp;&rarr; Tintín en América</li>
         <li>&emsp;&emsp;&rarr; Los cigarros del faraón</li>
         <li>&emsp;&emsp;&rarr; El Loto Azul</li>
+        <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
         <li>&emsp;&emsp;&rarr; Volumen 1</li>
@@ -488,7 +489,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 190 hours</li>
+        <li>🎮 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 200 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
         <li>❤️ <em><strong>Hogwarts Legacy</em></strong> on Playstation 5, 33 hours</li>
