--- a/index.html
+++ b/index.html
@@ -252,6 +252,8 @@
         <li>&emsp;&emsp;&rarr; Tintín en América</li>
         <li>&emsp;&emsp;&rarr; Los cigarros del faraón</li>
         <li>&emsp;&emsp;&rarr; El Loto Azul</li>
+        <li>&emsp;&emsp;&rarr; La oreja rota</li>
+        <li>&emsp;&emsp;&rarr; La isla negra</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -603,11 +605,11 @@
         </thead>
         <tbody>
           <tr>
-            <td>2022/10/23</td>
+            <td>2023/10/22</td>
             <td>Popular Málaga</td>
             <td>10K</td>
-            <td>57:08</td>
-            <td>5:43</td>
+            <td>55:01</td>
+            <td>5:30</td>
           </tr>
           <tr>
             <td>2022/12/31</td>
@@ -615,6 +617,13 @@
             <td>5K</td>
             <td>24:51</td>
             <td>5:05</td>
+          </tr>
+          <tr>
+            <td>2022/10/23</td>
+            <td>Popular Málaga</td>
+            <td>10K</td>
+            <td>57:08</td>
+            <td>5:43</td>
           </tr>
         </tbody>
       </table>
