--- a/index.html
+++ b/index.html
@@ -253,7 +253,8 @@
         <li>&emsp;&emsp;&rarr; Los cigarros del faraón</li>
         <li>&emsp;&emsp;&rarr; El Loto Azul</li>
         <li>&emsp;&emsp;&rarr; La oreja rota</li>
-        <li>&emsp;&emsp;&rarr; La isla negra</li>
+        <li>&emsp;&emsp;&rarr; La isla Negra</li>
+        <li>&emsp;&emsp;&rarr; El cetro de Ottokar</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
