--- a/index.html
+++ b/index.html
@@ -255,6 +255,8 @@
         <li>&emsp;&emsp;&rarr; La oreja rota</li>
         <li>&emsp;&emsp;&rarr; La isla Negra</li>
         <li>&emsp;&emsp;&rarr; El cetro de Ottokar</li>
+        <li>&emsp;&emsp;&rarr; El cangrejo de las pinzas de oro</li>
+        <li>&emsp;&emsp;&rarr; La estrella misteriosa</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -605,6 +607,13 @@
           </tr>
         </thead>
         <tbody>
+          <tr>
+            <td>2023/10/29</td>
+            <td>Media Maratón Málaga</td>
+            <td>21,097K</td>
+            <td>1:59:22</td>
+            <td>5:39</td>
+          </tr>
           <tr>
             <td>2023/10/22</td>
             <td>Popular Málaga</td>
