--- a/index.html
+++ b/index.html
@@ -32,12 +32,36 @@
     <h2>Fonts</h2>
     <ul id="fonts">
       <li>
+        <div class="col1"><strong>Font: At Roca</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-roca">Font details</a></div>
+        <div class="col2"><img src="assets/At Roca.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: UD Las Palmas</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/UDLASPALMAS.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: Sports Emotion</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/Bethebest.svg"></div>
+      </li>
+      <li>
         <div class="col1"><strong>Font: At Queen</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-queen">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-queen"><img src="assets/AtQueen.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At King</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-king">Font details</a></div>
         <div class="col2"><a href="https://arillatype.studio/font/at-king"><img src="assets/AtKing.svg"></a></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/LALIGAPlayers.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/LALIGAHeadline.svg"></div>
+      </li>
+      <li>
+        <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
+        <div class="col2"><img src="assets/LALIGAText.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Font: At Slam Cnd</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-slam-cnd">Font details</a></div>
