--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </li>
       <li>
         <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
-        <div class="col2"><img src="assets/LALIGAPlayers.svg"></div>
+        <div class="col2"><img src="assets/LALIGAPLAYERS.svg"></div>
       </li>
       <li>
         <div class="col1"><strong>Client: LALIGA</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
