--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul id="fonts">
       <li>
         <div class="col1"><strong>Font: At Roca</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: <a href="https://arillatype.studio/font/at-roca">Font details</a></div>
-        <div class="col2"><img src="assets/AtRoca.svg"></div>
+        <div class="col2"><a href="https://arillatype.studio/font/at-roca"><img src="assets/AtRoca.svg"></a></div>
       </li>
       <li>
         <div class="col1"><strong>Client: UD Las Palmas</strong><br>Foundry: Arillatype<br>Date: 2023<br>Link: *Soon*</div>
