--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
         <li>&emsp;&emsp;&rarr; El cetro de Ottokar</li>
         <li>&emsp;&emsp;&rarr; El cangrejo de las pinzas de oro</li>
         <li>&emsp;&emsp;&rarr; La estrella misteriosa</li>
+        <li>&emsp;&emsp;&rarr; El secreto del Unicornio</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -518,6 +519,7 @@
       </p>
       2023:
       <ul>
+        <li>🎮 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 4 hours</li>
         <li>🔥 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 180 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
@@ -737,6 +739,7 @@
     <div class="col2c" id="awards">
       <p><strong>Awards</strong></p>
       <ul>
+        <li><strong>Premio Gràffica 2023</strong>.</li>
         <li><strong>Red Dot Awards 2022</strong>, Best of the Best for <em>RTL United</em>.</li>
         <li><strong>iF Design Awards 2022</strong>, Winner for <em>RTL United</em>.</li>
         <li><strong>D&AD 2021</strong>, Wood Pencil for <em>Amsteldok</em>.</li>
