--- a/index.html
+++ b/index.html
@@ -239,11 +239,10 @@
   </section>
   <section class="content" id="about">
     <h2>About</h2>
-    <p>I’m Pedro Arilla (1984—), a designer with a passion for words, co-founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
-    <p>I’ve led projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts. My job has been awarded and exhibited worldwide. I’ve taught workshops and spoken at conferences in universities and events around the globe. I’ve been jury in literary and branding awards. My texts and articles have been translated into distant languages.</p>
-    <p>I previously worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA). I graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK). I’m publishing a book on type evaluation (Campgràfic, 2024). I co-organise and teach an international one-week type design workshop (Glíglifo). For over a decade I wrote one of the main blogs on typography in Spanish (Don Serifa)..</p>
-    <p>I’m from Ejea de los Caballeros (Zaragoza, Spain). I’ve lived also in London (United Kingdom). Now I am based in La Cala del Moral (Málaga, Spain) because I love blue colour.</p>
-    <p>I share my life with Cris — and Bunbury, our dog.</p>
+    <p>I’m Pedro Arilla (1984—), a designer with a passion for words, Co-Founder and Type Director of <a href="https://arillatype.studio">Arillatype.Studio®</a> where we help brands worldwide to encapsulate their voices typographically.</p>
+    <p>I’ve led projects for clients such as Google, Coca-Cola, LaLiga, Unilever, Paralympics and UEFA, and designed typefaces in Latin, Arabic, Cyrillic, Greek, Thai and Japanese scripts.</p>
+    <p>I previously graduated with Distinction in the world’s top Typeface Design Masters of Reading (UK) and worked as a Creative Director at the legendary foundries Fontsmith (UK) and Monotype (USA).</p>
+    <p>I’m publishing a book on type evaluation (Campgràfic, 2024).</p>
   </section>
     <section class="content" id="contact">
     <h2>Contact</h2>
@@ -282,6 +281,7 @@
         <li>&emsp;&emsp;&rarr; El cangrejo de las pinzas de oro</li>
         <li>&emsp;&emsp;&rarr; La estrella misteriosa</li>
         <li>&emsp;&emsp;&rarr; El secreto del Unicornio</li>
+        <li>&emsp;&emsp;&rarr; El tesoro de Rackham el Rojo</li>
         <li>✅ <em><strong>Guía NBA 2023-24 Gigantes</em></strong> de Kike García y Alejandro Gaitán</li>
         <li>✅ <em><strong>King Corp.</em></strong> de David Fernández y José María Olmo</li>
         <li>❤️ <em><strong>One piece</em></strong> de Eiichirō Oda</li>
@@ -519,7 +519,7 @@
       </p>
       2023:
       <ul>
-        <li>🎮 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 4 hours</li>
+        <li>🎮 <em><strong>The Last of Us: Part 1</em></strong> on Playstation 5, 10 hours</li>
         <li>🔥 <em><strong>The Legend of Zelda: Tears of the Kingdom</em></strong> on Nintendo Switch, 180 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country 2</em></strong> on SNES (emulated), 5 hours</li>
         <li>♻️ <em><strong>Donkey Kong Country</em></strong> on SNES (emulated), 5 hours</li>
